--- a/app/Plugin/Feedback/webroot/css/feedback.css
+++ b/app/Plugin/Feedback/webroot/css/feedback.css
@@ -1,1 +1,1 @@
-.feedback-plugin { display:scroll;position:fixed;top: 250px; left: 0 }
+.feedback-plugin { display:scroll;position:fixed;top: 250px; right: 0 }
