--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -28,3 +28,9 @@
 	margin-top: 50px;
 	border-top: 1px solid #ddd;
 }
+
+@media (min-width: 0) and (max-width: 991px) {
+	.dev-submenu {
+		position: relative;
+	}
+}
