--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -34,6 +34,11 @@
 	border-top: 1px solid #ddd;
 }
 
+.nav .caret {
+	border-top-color: white !important;
+	border-bottom-color: white;
+}
+
 @media (min-width: 0) and (max-width: 991px) {
 	.dev-submenu {
 		position: relative;
