--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -1,32 +1,14 @@
-<div class="col-lg-4">
+<div class="loader" ng-if="!errors && (!stats || !recent)"></div>
+<div
+	ng-repeat="(key, data) in stats"
+	class="col-md-4"
+>
 	<div class="panel panel-primary">
-		<div class="panel-heading">Locations</div>
+		<div class="panel-heading">{{ key.charAt(0).toUpperCase() + key.substring(1) }}</div>
 		<div class="panel-body">
-			<h2 style="text-align: center">1 / &infin;</h2>
+			<h2 style="text-align: center">{{data[0] || number }} / {{ data[1] || '&infin;' }}</h2>
 			<div class="progress">
-				<div class="progress-bar" style="width: 0%;"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="col-lg-4">
-	<div class="panel panel-primary">
-		<div class="panel-heading">Containers</div>
-		<div class="panel-body">
-			<h2 style="text-align: center">2  / &infin;</h2>
-			<div class="progress">
-				<div class="progress-bar" style="width: 0%;"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="col-lg-4">
-	<div class="panel panel-primary">
-		<div class="panel-heading">Items</div>
-		<div class="panel-body">
-			<h2 style="text-align: center"><span class="stat-value">2  / &infin;</h2>
-			<div class="progress">
-				<div class="progress-bar" style="width: 0%;"></div>
+				<div class="progress-bar" style="width: {{ data[2] || 0 }}%;"></div>
 			</div>
 		</div>
 	</div>
@@ -35,17 +17,11 @@
 <h4>Recent Items</h4>
 <table class="table table-striped">
 	<tbody>
-		<tr>
-			<td>10</td>
-			<td>wires</td>
-			<td><a href="/containers/view/comp2">Comp Box 2</a></td>
-			<td>on 4/2/12</td>
-		</tr>
-		<tr>
-			<td>1</td>
-			<td>network wires and boxes</td>
-			<td><a href="/containers/view/comp1">Comp Box 1</a></td>
-			<td>on 18/2/13</td>
+		<tr ng-repeat="item in recent">
+			<td>{{ item.quantity }}</td>
+			<td>{{ item.body }}</td>
+			<td><a ng-href="/#/containers/{{ item.slug }}">{{ item.container }}</a></td>
+			<td>{{ item.modified | date : 'medium'}}</td>
 		</tr>
 	</tbody>
 </table>
