Changed links to partials on layout.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,8 +29,8 @@
 								<i class="icon-user" style="margin-right: 5px"></i> Account <span class="caret"></span>
 							</button>
 							<ul class="dropdown-menu">
-								<li><a href="/account"><i class="icon-gears"></i> Settings</a></li>
-								<li><a href="/users/auth"><i class="icon-lock"></i> Applications</a></li>
+								<li><a href="/#/account"><i class="icon-gears"></i> Settings</a></li>
+								<li><a href="/#/users/auth"><i class="icon-lock"></i> Applications</a></li>
 								<li class="divider"></li>
 								<li><a href="/logout"><i class="icon-off"></i> Sign Out</a></li>
 							</ul>
@@ -53,19 +53,19 @@
 				<div class="well well-small main-navigation">
 					<ul class="nav nav-pills nav-stacked">
 							<li>
-							<a href="/dashboard"><i class="icon-dashboard" style="color: black; margin-right: 15px"></i>Dashboard</a>
+							<a href="/#/dashboard"><i class="icon-dashboard" style="color: black; margin-right: 15px"></i>Dashboard</a>
 						</li>
 							<li>
-							<a href="/containers"><i class="icon-inbox" style="color: black; margin-right: 15px"></i>My Containers</a>
+							<a href="/#/containers"><i class="icon-inbox" style="color: black; margin-right: 15px"></i>My Containers</a>
 						</li>
 							<li>
-							<a href="/container_items"><i class="icon-tasks" style="color: black; margin-right: 15px"></i>My Items</a>
+							<a href="/#/container_items"><i class="icon-tasks" style="color: black; margin-right: 15px"></i>My Items</a>
 						</li>
 							<li>
-							<a href="/locations"><i class="icon-location-arrow" style="color: black; margin-right: 15px"></i>My Locations</a>
+							<a href="/#/locations"><i class="icon-location-arrow" style="color: black; margin-right: 15px"></i>My Locations</a>
 						</li>
 							<li style="border-top:1px solid #ddd"></li>
-						<li class="dropdown-header">Quick Actions</li>
+							<li class="dropdown-header">Quick Actions</li>
 							<li>
 							<a data-toggle="modal" data-target="#layout-modal" href="/forgot_login">
 								<i class="icon-qrcode" style="color: black; margin-right: 15px"></i>Login Your Phone			</a>
