--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,8 +87,16 @@
 					<div id="submenu-content"></div>
 					<div class="spacer"></div>
 				</div>
-				<div id="ajax-error" class="alert alert-danger" style="display:none"></div>
 				<div class="row">
+					{% verbatim %}
+					<div
+						class="alert alert-{{ message.type.toLowerCase() }}"
+						ng-repeat="message in notifyConsume()"
+						role="alert"
+						ng-bind="message.message"
+					>
+					</div>
+					{% endverbatim %}
 					{% block content %}{% endblock %}
 				</div>
 			</div>
@@ -99,7 +107,7 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<a href="http://play.google.com/store/apps/details?id=com.boxmeup.app">
-							<img src="img/get_it_on_play_logo_small.png?1378946225" alt="Get it on Google Play" />				</a>
+							<img src="img/get_it_on_play_logo_small.png?1378946225" alt="Get it on Google Play" /></a>
 					</div>
 					<div class="col-lg-8">
 						<div class="pull-right">
