--- a/web/partials/user/account.html
+++ b/web/partials/user/account.html
@@ -26,6 +26,6 @@
 		</div>
 	</div>
 	<div class="col-lg-12" style="margin-top: 20px;">
-		<button type="submit" class="btn btn-default btn-primary" ng-disabled="accountForm.$invalid">Update Account Settings</button>
+		<button type="submit" class="btn btn-default btn-primary" ng-disabled="accountForm.$invalid" ng-click="AcctCtrl.update()">Update Account Settings</button>
 	</div>
 </form>
