--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,34 +1,34 @@
-@media (min-width: 1200px) {
-	.container>.navbar-header, .container>.navbar-collapse {
-		margin-left: 37px;
+@media (min-width: $screen-lg-desktop) {
+	.navbar>.container .navbar-brand {
+		margin-left: 50px;
 	}
-	.main-navigation {
+
+	.main-navigation, .main-navigation-bg {
 		width: 240px;
 		height: 100%;
 		top: -5px;
-		padding-top: 100px;
+		padding-top: 90px;
 	}
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
-	.main-navigation {
-		width: 200px;
+@media (min-width: $screen-desktop) and (max-width: $screen-lg-desktop - 1) {
+	.main-navigation, .main-navigation-bg {
+		width: 240px;
+		height: 100%;
+		left: 0;
+		top: -5px;
+		padding-top: 90px;
 	}
 }
 
-@media (min-width: 0) and (max-width: 991px) {
+@media (max-width: $screen-desktop - 1) {
 	body {
 		margin-bottom: 0px;
 	}
-	.submenu.affix {
-		position: relative;
-	}
 	.footer.navbar-fixed-bottom {
+		width: 100%;
 		position: relative;
 	}
-}
-
-@media (min-width: 0) and (max-width: 1199px) {
 	.main-navigation {
 		width: 100%;
 		position: relative;
