Fixed some CSS related to pagination and brand.

--- a/web/partials/container/list.html
+++ b/web/partials/container/list.html
@@ -74,7 +74,7 @@
 		</tbody>
 	</table>
 	<div class="panel-footer">
-		<ul class="pagination">
+		<ul class="pagination pf">
 			<li><a href="#">&laquo;</a></li>
 			<li><a href="#">1</a></li>
 			<li><a href="#">2</a></li>
