--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,60 +17,51 @@
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-					<i class="icon-list" style="color: black"></i>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
 				<a href="/" class="navbar-brand">Boxmeup</a>
 			</div>
 			<div class="navbar-collapse collapse navbar-responsive-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<div class="btn-group">
-							<button type="button" class="btn btn-primary dropdown-toggle navbar-btn" data-toggle="dropdown">
-								<i class="icon-user" style="margin-right: 5px"></i> Account <span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><a href="/#/account"><i class="icon-gears"></i> Settings</a></li>
-								<li><a href="/#/users/auth"><i class="icon-lock"></i> Applications</a></li>
-								<li class="divider"></li>
-								<li><a href="/logout"><i class="icon-off"></i> Sign Out</a></li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-				<form action="/searches/find" autocomplete="off" class="navbar-form pull-right" id="SearchDashboardForm" method="post" accept-charset="utf-8">
-					<div style="display:none;">
-						<input type="hidden" name="_method" value="POST"/>
-					</div>
+				<ul class="nav navbar-nav navbar-right input-group">
 					<input name="data[Search][query]" autocomplete="off" class="form-control" placeholder="Search" type="text" id="SearchQuery"/>
-				</form>
+					<div class="btn-group input-group-btn">
+						<button type="button" class="btn btn-primary dropdown-toggle navbar-btn" data-toggle="dropdown">
+							<i class="icon-user" style="margin-right: 5px"></i> Account <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu">
+							<li><a href="/#/account"><i class="icon-gears"></i> Settings</a></li>
+							<li><a href="/#/users/auth"><i class="icon-lock"></i> Applications</a></li>
+							<li class="divider"></li>
+							<li><a href="/logout"><i class="icon-off"></i> Sign Out</a></li>
+						</ul>
+					</div>
+				</ul>
+				
 				<div class="main-navigation sidebar-collapse">
 					<ul class="nav nav-pills nav-stacked">
-							<li>
-							<a href="/#/dashboard"><i class="icon-dashboard" style="color: black; margin-right: 15px"></i>Dashboard</a>
-						</li>
-							<li>
-							<a href="/#/containers"><i class="icon-inbox" style="color: black; margin-right: 15px"></i>My Containers</a>
-						</li>
-							<li>
-							<a href="/#/container_items"><i class="icon-tasks" style="color: black; margin-right: 15px"></i>My Items</a>
-						</li>
-							<li>
-							<a href="/#/locations"><i class="icon-location-arrow" style="color: black; margin-right: 15px"></i>My Locations</a>
-						</li>
-							<li style="border-top:1px solid #ddd"></li>
-							<li class="dropdown-header">Quick Actions</li>
-							<li>
+						<li><a href="/#/dashboard"><i class="icon-dashboard" style="color: black; margin-right: 15px"></i>Dashboard</a></li>
+						<li><a href="/#/containers"><i class="icon-inbox" style="color: black; margin-right: 15px"></i>My Containers</a></li>
+						<li><a href="/#/container_items"><i class="icon-tasks" style="color: black; margin-right: 15px"></i>My Items</a></li>
+						<li><a href="/#/locations"><i class="icon-location-arrow" style="color: black; margin-right: 15px"></i>My Locations</a></li>
+						<li style="border-top:1px solid #ddd"></li>
+						<li class="dropdown-header">Quick Actions</li>
+						<li>
 							<a data-toggle="modal" data-target="#layout-modal" href="/forgot_login">
-								<i class="icon-qrcode" style="color: black; margin-right: 15px"></i>Login Your Phone			</a>
+								<i class="icon-qrcode" style="color: black; margin-right: 15px"></i>Login Your Phone
+							</a>
 						</li>
-							<li>
+						<li>
 							<a data-toggle="modal" data-target="#layout-modal" href="/containers/add">
-								<i class="icon-plus-sign" style="color: green; margin-right: 15px"></i>Add Container			</a>
+								<i class="icon-plus-sign" style="color: green; margin-right: 15px"></i>Add Container
+							</a>
 						</li>
-							<li class="to-top hidden" style="border-top: 1px solid #ddd"></li>
+						<li class="to-top hidden" style="border-top: 1px solid #ddd"></li>
 						<li>
 							<a href="#" class="to-top hidden">
-								<i class="icon-arrow-up" style="color: #666; margin-right: 15px"></i>Go to Top			</a>
+								<i class="icon-arrow-up" style="color: #666; margin-right: 15px"></i>Go to Top
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -104,7 +95,7 @@
 		<div class="footer navbar-fixed-bottom">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 hidden-xs hiden-sm">
 						<a href="http://play.google.com/store/apps/details?id=com.boxmeup.app">
 							<img src="img/get_it_on_play_logo_small.png?1378946225" alt="Get it on Google Play" /></a>
 					</div>
