--- a/templates/layout.html
+++ b/templates/layout.html
@@ -111,7 +111,7 @@
 		{% else %}
 		<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
 		<script>
-			require(['/js/build.js'], function() {});
+			require(['/js/build.js']);
 		</script>
 		{% endif %}
 </body>
