--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -2,21 +2,35 @@
 <div class="row">
 	<div
 		ng-repeat="(key, data) in stats"
-		class="col-md-4"
+		class="col-sm-4"
 	>
-		<div class="panel panel-primary">
+		<div
+			class="panel"
+			ng-class="{
+				'panel-success': data[2] < 50,
+				'panel-warning': data[2] >= 50 && data[2] < 100,
+				'panel-danger': data[2] === 100
+			}">
 			<div class="panel-heading">{{ key.charAt(0).toUpperCase() + key.substring(1) }}</div>
 			<div class="panel-body">
 				<h2 style="text-align: center">{{data[0] || number }} / {{ data[1] || '&infin;' }}</h2>
 				<div class="progress">
-					<div class="progress-bar" style="width: {{ data[2] || 0 }}%;"></div>
+					<div
+						class="progress-bar progress-bar-striped"
+						ng-class="{
+							'progress-bar-success': data[2] < 50,
+							'progress-bar-warning': data[2] >= 50 && data[2] < 100,
+							'progress-bar-danger': data[2] === 100
+						}"
+						style="width: {{ data[2] || 0 }}%;">
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<div class="panel panel-default">
+<div class="panel panel-primary">
 	<div class="panel-heading">Recent Items</div>
 	<table class="table table-striped">
 		<tbody>
