--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,7 +5,9 @@
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 
 @import "_main";
+@import "_menu";
+@import "_footer";
+
 @import "_pagination";
 @import "_affix";
-@import "_menu";
 @import "_loader";
