Allow collapsed menu to hide when selecting an option.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
  	<![endif]-->
 </head>
 <body>
-	<div class="navbar navbar-default navbar-fixed-top">
+	<div class="navbar navbar-default navbar-fixed-top" bmu-navbar-collapse>
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -91,7 +91,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal fade" id="layout-modal" data-role="dialog"></div>
 		<div class="footer navbar-fixed-bottom">
 			<div class="container">
 				<div class="row">
