--- a/web/partials/container/list.html
+++ b/web/partials/container/list.html
@@ -7,7 +7,7 @@
 		<form class="form-inline">
 			<div class="btn-group">
 				<button type="button" class="btn btn-success">Add Container</button>
-				<button type="button" class="btn btn-primary"><i class="icon-print"></i> Bulk Print</button>
+				<button type="button" class="btn btn-primary hidden-xs hidden-sm"><i class="icon-print"></i> Bulk Print</button>
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 					More
 					<span class="caret"></span>
