Integrated container item count on dashboard stats.

--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -1,4 +1,4 @@
-<div class="loader" ng-if="!errors && (!stats || !recent)"></div>
+<div class="loader" ng-if="!stats || !recent" style="margin-bottom: 2em;"></div>
 <div class="row">
 	<div
 		ng-repeat="(key, data) in stats"
