Notifications now support html markup.
Closes #223

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -82,7 +82,7 @@
 							class="alert alert-{{ message.type.toLowerCase() }}"
 							ng-repeat="message in notifyConsume()"
 							role="alert"
-							ng-bind="message.message"
+							ng-bind-html="message.message"
 						>
 						</div>
 						{% endverbatim %}
