--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -30,16 +30,12 @@
 	</div>
 </div>
 <div class="loader" ng-if="!recent" style="margin-bottom: 2em;"></div>
-<div class="panel panel-primary" ng-if="recent">
+<div class="panel panel-default" ng-if="recent">
 	<div class="panel-heading">Recent Items</div>
-	<table class="table table-striped">
-		<tbody>
-			<tr ng-repeat="item in recent">
-				<td>{{ item.quantity }}</td>
-				<td>{{ item.body }}</td>
-				<td><a ng-href="/#/containers/{{ item.slug }}">{{ item.container }}</a></td>
-				<td>{{ item.modified | date : 'medium'}}</td>
-			</tr>
-		</tbody>
-	</table>
+	<ul class="list-group" ng-repeat="item in recent">
+		<li class="list-group-item">
+			<span class="badge">{{ item.quantity }}</span>
+			{{ item.body }}
+		</li>
+	</ul>
 </div>
