Further updates to recent items dashboard.

--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -35,7 +35,7 @@
 	<ul class="list-group" ng-repeat="item in recent">
 		<li class="list-group-item">
 			<span class="badge">{{ item.quantity }}</span>
-			{{ item.body }}
+			{{ item.body }} in <a href="/app/#/container/view/{{ item.container.slug }}">{{ item.container.name }}</a>
 		</li>
 	</ul>
 </div>
