Implemented placeholder for adding a container.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
 							</a>
 						</li>
 						<li>
-							<a data-toggle="modal" data-target="#layout-modal" href="/containers/add">
+							<a href="/app/#/containers/add">
 								<i class="icon-plus-sign" style="color: green; margin-right: 15px"></i>Add Container
 							</a>
 						</li>
