--- a/web/partials/container/list.html
+++ b/web/partials/container/list.html
@@ -6,7 +6,7 @@
 	<div class="panel-body">
 		<form class="form-inline">
 			<div class="btn-group">
-				<button type="button" class="btn btn-success">Add Container</button>
+				<a href="/app/#/containers/add" class="btn btn-success">Add Container</a>
 				<button type="button" class="btn btn-primary hidden-xs hidden-sm"><i class="icon-print"></i> Bulk Print</button>
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 					More
