--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -1,4 +1,3 @@
-<div class="loader" ng-if="!stats" style="margin-bottom: 2em;"></div>
 <div class="row" ng-if="stats">
 	<div
 		ng-repeat="(key, data) in stats"
@@ -29,7 +28,6 @@
 		</div>
 	</div>
 </div>
-<div class="loader" ng-if="!recent" style="margin-bottom: 2em;"></div>
 <div class="panel panel-default" ng-if="recent.entries">
 	<div class="panel-heading">Recent Items</div>
 	<ul class="list-group" ng-repeat="item in recent.entries">
@@ -39,3 +37,4 @@
 		</li>
 	</ul>
 </div>
+<div class="loader" ng-if="!stats || !recent" style="margin-bottom: 2em;"></div>
