--- a/web/partials/container/list.html
+++ b/web/partials/container/list.html
@@ -25,7 +25,7 @@
 			</div>
 		</form>
 	</div>
-	<table class="table table-hover">
+	<table class="table table-hover" ng-controller="ContainerSave as SaveCtrl">
 		<thead>
 			<tr>
 				<th>Quantity</th>
@@ -48,7 +48,7 @@
 							<li class="divider"></li>
 							<li><a href="/app/#/containers/export/{{ container.slug }}"><i class="icon-download-alt"></i> Export to CSV</a></li>
 							<li class="divider"></li>
-							<li><a href="/app/#/containers/delete/{{ container.slug }}"><i class="icon-remove"></i> Delete</a></li>
+							<li><a href ng-click="SaveCtrl.remove(container.slug, 'refresh')"><i class="icon-remove"></i> Delete</a></li>
 						</ul>
 					</div>
 				</td>
