Changed view link in recent for consistency.

--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -33,7 +33,7 @@
 	<ul class="list-group" ng-repeat="item in recent.entries">
 		<li class="list-group-item">
 			<span class="badge">{{ item.quantity }}</span>
-			{{ item.body }} in <a href="/app/#/container/view/{{ item.container.slug }}">{{ item.container.name }}</a>
+			{{ item.body }} in <a href="/app/#/containers/view/{{ item.container.slug }}">{{ item.container.name }}</a>
 		</li>
 	</ul>
 </div>
