--- a/web/partials/container/add.html
+++ b/web/partials/container/add.html
@@ -10,7 +10,7 @@
 	<div class="form-group">
 		<label for="ContainerName" class="col-sm-2 control-label">Name</label>
 		<div class="col-sm-10">
-			<input type="text" id="ContainerName" name="name" class="form-control" ng-model="container.name" required>
+			<input type="text" id="ContainerName" name="name" class="form-control" ng-model="container.name" maxlength="36" required>
 		</div>
 	</div>
 	<div class="form-group">
